--- a/assets/base.css
+++ b/assets/base.css
@@ -2325,7 +2325,7 @@ deferred-media[class] :is(.deferred-media__poster-button img, .deferred-media__p
   }
 
   th,
-  td {
+  td:not(.correio-lunar) {
     text-align: start;
     padding-inline: var(--padding-md);
     padding-block: var(--padding-sm);
