--- a/assets/base.css
+++ b/assets/base.css
@@ -4274,3 +4274,5 @@ text-component {
   background-color: #FCD700 !important;
   color: #000 !important;
 }
+
+.hidden-busca { display: none !important; }
