--- a/snippets/predictive-search-products-list.liquid
+++ b/snippets/predictive-search-products-list.liquid
@@ -51,7 +51,7 @@
             {% assign int_id = _id | times: 1 %}
             {% assign product = products | find: 'id', int_id %}
             <li
-              class="predictive-search-results__card predictive-search-results__card--product"
+              class="predictive-search-results__card predictive-search-results__card--product  {% if product.type == 'Posters, Prints, & Visual Artwork' %}hidden-busca{% endif %}"
               ref="recentlyViewedItems[]"
             >
               {% render 'resource-card',
@@ -66,7 +66,7 @@
         {% else %}
           {% for product in products limit: limit %}
             <li
-              class="predictive-search-results__card predictive-search-results__card--product"
+              class="predictive-search-results__card predictive-search-results__card--product  {% if product.type == 'Posters, Prints, & Visual Artwork' %}hidden-busca{% endif %}"
               ref="recentlyViewedItems[]"
             >
               {% render 'resource-card',
@@ -98,7 +98,7 @@
           {% assign int_id = _id | times: 1 %}
           {% assign product = products | find: 'id', int_id %}
           <li
-            class="predictive-search-results__card predictive-search-results__card--product"
+            class="predictive-search-results__card predictive-search-results__card--product  {% if product.type == 'Posters, Prints, & Visual Artwork' %}hidden-busca{% endif %}"
             ref="resultsItems[]"
           >
             {% render 'resource-card',
@@ -113,7 +113,7 @@
       {% else %}
         {% for product in products limit: limit %}
           <li
-            class="predictive-search-results__card predictive-search-results__card--product"
+            class="predictive-search-results__card predictive-search-results__card--product {% if product.type == 'Posters, Prints, & Visual Artwork' %}hidden-busca{% endif %}"
             ref="resultsItems[]"
           >
             {% render 'resource-card',
